accessibility fixes
Added some labels to the HTML for easier use
Made the equation in ModPractice bold so it would catch people's eye
Changed the styles, so it looks better on some phones.
(It still looks bad on desktops)

--- a/docs/style.css
+++ b/docs/style.css
@@ -1,6 +1,4 @@
 html, body {
-  width: 100%;
-  height: 100%;
   text-align: center;
   background-color: white;
   
@@ -35,6 +33,19 @@ html, body {
 	height: 80%;
 	background-color: lightblue;
 }
+.button-section {
+	text-align: center;
+	justify-content: center;	
+}
 p {text-align: center;}
 div {text-align: center;}
 
+#equation {
+	font-weight:bold;
+}
+@media (max-width: 399px) {
+.inner-left {
+	width: 95%;
+}
+
+}
